# AILabsProject

./: .coveragerc  Project_Specification.md  README.md  privkey.txt  pubkey.txt  pyproject.toml
Documentation/: ImplementDoc.md  SpecificDoc.md  TestDoc.md  UseGuide.md
ProjectCode/RSA/: CLInterface.py  Cription.py  GUInterface.py  KeyGen.py  PrimeGen.py  clinterface.py  guinterface.py  keygen.py  primegen.py
ProjectCode/Testing/: TestCLInterface.py  TestCription.py  TestKeyGen.py  TestPrimeGen.py  test_CLInterface.py  test_Cription.py  test_KeyGen.py  test_PrimeGen.py  test_cription.py  test_keygen.py  test_primegen.py
ProjectCode/rsa/: clinterface.py  cription.py  guinterface.py  keygen.py
codecomment/rsacomment/: clinterface.txt  cription.txt  guinterface.txt  keygen.txt
codecomment/testcomment/: test_cription.txt  test_keygen.txt  test_primegen.txt
project_code/RSA/: CLInterface.py  Cription.py  KeyGen.py  PrimeGen.py
projectcode/rsa/: clinterface.py  cription.py  guinterface.py  keygen.py  primegen.py  privkey.txt  pubkey.txt
projectcode/testing/: test_cription.py  test_keygen.py  test_primegen.py
weekly_reports/: week1report.md  week2report.md  week3report.md  week4report.md  week5report.md  week6report.md  week7report.md  week_1_report.md
