[tool.poetry]
name = "ai_labs_project"
version = "0.1.0"
description = "RSA Encryption and Decryption Project"
authors = ["Ali Onur Ozkan <alionurozkan@gmail.com>"]
license = "University of Helsinki"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.6.12"
pylint = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
